--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -1,11 +1,18 @@
-.md-main__inner {
-  margin: 0 auto;   /* center */
-  padding: 0 20px;  /* horizontal padding */
+.md-tabs__item {
+  height: 1.2rem
 }
 
-/* Adjust spacing for paragraphs globally */
+.md-tabs__link {
+  margin: 0 auto
+}
+
+.md-main__inner {
+  margin: 0 auto;
+  padding: 0 20px;
+}
+
 .md-typeset p {
-  margin-bottom: 1em;  /* increase/decrease vertical margin */
+  margin-bottom: 1em;
 }
 
 .md-social {
